--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -6,7 +6,7 @@
       <nav id="site-nav" class="greedy-nav">
         <button><div class="navicon"></div></button>
         <ul class="visible-links">
-          <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://www.chemie.ruhr-uni-bochum.de/fak/lsag.html.de"><img src="/images/RUB.png" alt="Ruhr-Universität Bochum" width="32" height="32"></a><a href="{{ base_path }}/">{{ site.title }}</a></li>
+          <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://www.chemie.ruhr-uni-bochum.de/fak/lsag.html.de"><img src="/images/RUB.png" alt="Ruhr-Universität Bochum" width="48" height="48" align="middle"></a><a href="{{ base_path }}/">{{ site.title }}</a></li>
           {% for link in site.data.navigation.main %}
             {% if link.url contains 'http' %}
               {% assign domain = '' %}
