--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -120,9 +120,9 @@ $x-large                    : 1280px !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow : float;
-$right-sidebar-width        : float;
-$right-sidebar-width-wide   : float;
+$right-sidebar-width-narrow : 0px;
+$right-sidebar-width        : 0px;
+$right-sidebar-width-wide   : 0px;
 
 $susy: (
   columns: 12,
