--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
     {% endif %}
 	
-    <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+    <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fa-brands fa-x-twitter fa-fw" aria-hidden="true"></i> X</a></li>
 	<li><a href="https://researchgate.net/profile/Andre_Eckhardt"><i class="fab fa-researchgate" aria-hidden="true"></i> ResearchGate</a></li>
 	<li><a href="https://linkedin.com/in/{{ site.author.linkedin }}"><i class="fab fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
 
